# iLoveWorkback

./: README.md  requirements.txt
app/: config.py  main.py
app/routers/: documents.py
app/services/: document_processor.py  llm.py
iLoveWorkback/: pyproject.toml
iLoveWorkback/app/: config.py
iLoveWorkback/app/models/: schemas.py
iLoveWorkback/app/routers/: documents.py
iLoveWorkback/app/services/: llm.py
