[project]
name = "iloveworkback"
version = "0.1.0"
description = "Backend for iLoveWork - Professional document analysis and generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "groq>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-docx>=1.1.0",
    "pypdf>=5.0.0",
    "reportlab>=4.2.0",
    "aiofiles>=24.0.0",
]
